force-app/main/default/objects/Multiple_Billing_Resource__c/Multiple_Billing_Resource__c.object-meta.xml
<CustomObject>
    <label>Multiple Billing Resource</label>
    <nameField>
        <label>Multiple Billing Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multiple Billing Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>