force-app/main/default/objects/Multiple_Billing_Resource__c/fields/Billing_Resource__c.field-meta.xml
<CustomField>
    <fullName>Billing_Resource__c</fullName>
    <label>Billing Resource</label>
    <referenceTo>Billing_Resource__c</referenceTo>
    <relationshipLabel>Multiple Billing Resources</relationshipLabel>
    <relationshipName>Multiple_Billing_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>