force-app/main/default/objects/Multiple_Billing_Resource__c/fields/Main_Billing_Resource__c.field-meta.xml
<CustomField>
    <fullName>Main_Billing_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Visible on the contract, only one billing resource to be checked</inlineHelpText>
    <label>Main Billing Resource</label>
    <type>Checkbox</type>
</CustomField>