force-app/main/default/objects/Multiple_Billing_Resource__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Multiple Billing Resources</relationshipLabel>
    <relationshipName>Multiple_Billing_Resources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>